--- a/Frontend/src/app/dashboard/dashboard.component.css
+++ b/Frontend/src/app/dashboard/dashboard.component.css
@@ -1,22 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Lato&display=swap");
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  margin: 0;
-  font-family: "Lato", sans-serif;
-  margin: 0;
-  display: flex;
-  justify-content: start;
-  min-height: 100vh;
-  background-color: #f7f7f7;
-  z-index: 1;
-  transition: background-color 1s linear;
-}
-
 input[type="text"],
 input[type="number"] {
   border: 1px solid #dedede;
@@ -28,11 +9,6 @@ input[type="number"] {
   transition: border 1s linear;
 }
 
-body.dark {
-  background-color: #1b212c;
-  color: #fff;
-}
-
 input.dark {
   background-color: #2c3849;
   color: #fff;
@@ -42,8 +18,8 @@ input.dark {
 #logout {
   font-size: 2rem;
   position: absolute;
-  right: 0.5rem;
-  top: 30px;
+  /* right: 0.5rem; */
+  top: 1.5rem;
   width: 4rem;
   height: 4rem;
   cursor: pointer;
@@ -52,7 +28,7 @@ input.dark {
   /* background-color: #2ecc71; */
 }
 
-.row {
+.card-row {
   margin-top: 0;
   display: flex;
   width: 100vw;
@@ -289,13 +265,6 @@ select {
   margin: 0 5px;
 }
 
-.row-container {
-  margin: 10px auto;
-  display: flex;
-  flex-direction: row;
-  width: 100%vw;
-}
-
 h1 {
   letter-spacing: 1px;
   margin: 0;
@@ -356,6 +325,18 @@ label {
   margin: 10px 0;
 }
 
+h4 {
+  font-size: 1rem;
+  font-family: "Lato", sans-serif;
+}
+
+h2 {
+  padding-top: 1rem;
+  font-size: 1.5rem;
+  font-weight: 700;
+  font-family: "Lato", sans-serif;
+}
+
 .btn {
   cursor: pointer;
   background-color: #9c88ff;
@@ -367,8 +348,7 @@ label {
   font-size: 16px;
   margin: 10px 0 30px;
   padding: 10px;
-  width: 40%;
-  margin-top: 40px;
+  margin-top: 45px;
   margin-left: 5px;
 }
 
@@ -527,4 +507,25 @@ label {
 
 .list li:hover .edit-btn {
   opacity: 1;
+}
+
+.dark-rec {
+  background-color: #2c3849;
+  color: #fff;
+}
+
+.hidden {
+  display: none;
+}
+
+.show {
+  display: flex;
+}
+
+.shift {
+  right: 21.5rem;
+}
+
+.default {
+  right: 0.5rem;
 }
