--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -1,3 +1,22 @@
+@import url("https://fonts.googleapis.com/css?family=Lato&display=swap");
+
+* {
+  box-sizing: border-box;
+}
+
 body {
+  --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   margin: 0;
+  font-family: "Lato", sans-serif;
+  margin: 0;
+  display: flex;
+  justify-content: start;
+  min-height: 100vh;
+  background-color: #f7f7f7;
+  z-index: 1;
+  transition: background-color 1s linear;
+}
+body.dark {
+  background-color: #1b212c;
+  color: #fff;
 }
